# agatha-christie-death-on-the-cards

./: .gitignore  README.md
Backend/: Makefile  README.md  compose.yaml  pyproject.toml
Backend/app/: main.py  settings.py
Backend/app/controllers/: card.py  chat.py  detective_set.py  event_table.py  game.py  player.py  secret.py  utils.py  websocket.py
Backend/app/controllers/card_effects/: and_then_there_was_one_more.py  another_victim.py  ariadne_oliver.py  blackmailed.py  card_trade.py  cards_off_the_table.py  dead_card_folly.py  delay_the_murderers_escape.py  devious_detect.py  early_train_to_paddington.py  look_into_the_ashes.py  point_your_suspicions.py  social_faux_pas.py
Backend/app/database/: engine.py
Backend/app/models/: card.py  chat.py  detective_set.py  event_table.py  game.py  player.py  secret.py  websocket.py
Backend/app/services/: base.py  card.py  chat.py  detective_set.py  event_table.py  game.py  notification.py  player.py  secret.py
Backend/tests/: conftest.py
Backend/tests/app/controllers/: test_card.py  test_chat.py  test_detective_set.py  test_event_table.py  test_game.py  test_player.py  test_secret.py  test_websocket.py
Backend/tests/app/controllers/card_effects/: test_and_then_there_was_one_more.py  test_another_victim.py  test_ariadne_oliver.py  test_blackmailed.py  test_card_trade.py  test_cards_off_the_table.py  test_dead_card_folly.py  test_delay_the_murderers_escape.py  test_devious_detect.py  test_early_train_to_paddington.py  test_look_into_the_ashes.py  (+2 more)
Backend/tests/app/models/: test_model_websocket.py
Backend/tests/app/services/: test_service_base.py  test_service_card.py  test_service_chat.py  test_service_detective_set.py  test_service_event_table.py  test_service_game.py  test_service_player.py  test_service_secret.py
(+74 files in other folders)
